--- a/src/app/views/pages/register-player/register-player.component.html
+++ b/src/app/views/pages/register-player/register-player.component.html
@@ -37,7 +37,7 @@
                     </c-col>
                 </fieldset>
             </c-col>
-            <c-col [xs]="12">
+            <!-- <c-col [xs]="12">
                 <c-form-check>
                     <input cFormCheckInput id="gridCheck" name="gridCheck" type="checkbox" [checked]="your_property" (change)="your_property = !your_property" />
                     <label cFormCheckLabel for="gridCheck">Assign Team later</label>
@@ -50,7 +50,7 @@
                 <option value="2">Two</option>
                 <option value="3">Three</option>
               </select>
-            </c-col>
+            </c-col> -->
             <c-col [xs]="12">
                 <button cButton (click)="registerPlayer()" type="submit">Register</button>
             </c-col>
