--- a/src/app/views/pages/assign-players/assign-players.component.html
+++ b/src/app/views/pages/assign-players/assign-players.component.html
@@ -6,14 +6,16 @@
     <c-col [md]="2"></c-col>
     <c-col [md]="8">
         <label cLabel for="">Choose Team</label>
-        <select cSelect id="autoSizingSelect" [(ngModel)]="selectedTeam">
-            <option *ngFor="let value of values" value="{{value}}" >{{value}}</option>
+        <select cSelect id="autoSizingSelect" [(ngModel)]="selectedTeam" (onchange)="myFunc(selectedTeam)">
+            <option *ngFor="let value of teamObj" value="{{value.name}}" >{{value.name}}
+                <!-- <ng-container *ngIf="value!=null"></ng-container> -->
+            </option>
         </select>
     </c-col>
     <c-col [md]="2"></c-col>
 </c-row>
 
-<c-row *ngIf="selectedTeam!=''" class="mt-4">
+<c-row *ngIf="selectedTeam" class="mt-4">
     <c-col xs>
         <c-card class="mb-4">
             <c-card-header>Add Players in Team: <b>{{selectedTeam}}</b> </c-card-header>
@@ -38,26 +40,28 @@
                     <tbody>
                         <!-- | search: searchText" -->
                         <tr *ngFor="let p of playerObj | search: searchText">
-                            <td></td>
-                            <td class="text-left">
-                                <div>{{ p.firstName }}</div>
-                                <!-- <c-avatar size="md" src="{{ user.avatar }}"></c-avatar> -->
-                            </td>
-                            <td class="text-left">
-                                <div>{{ p.lastName }}</div>
-                            </td>
-                            <td class="text-left">
-                                <div>{{ p.cnic }}</div>
-                            </td>
-                            <td class="text-left">
-                                <p>{{p.playerSkills.style}}</p>
-                            </td>
-                            <td></td>
-                            <td>
-                                <button (click)="toggleModal(p)" style=" background-color:#4F5D73" cButton>Add Player</button>
-                                <!-- <a href="/#/register-team"><i class="fa fa-eye"></i></a> -->
-                                <!-- <i class="fa fa-eye"></i> -->
-                            </td>
+                            <ng-container *ngIf="!p.team">
+                                <td></td>
+                                <td class="text-left">
+                                    <div>{{ p.firstName }}</div>
+                                    <!-- <c-avatar size="md" src="{{ user.avatar }}"></c-avatar> -->
+                                </td>
+                                <td class="text-left">
+                                    <div>{{ p.lastName }}</div>
+                                </td>
+                                <td class="text-left">
+                                    <div>{{ p.cnic }}</div>
+                                </td>
+                                <td class="text-left">
+                                    <p>{{p.playerSkills.style}}</p>
+                                </td>
+                                <td></td>
+                                <td>
+                                    <button (click)="toggleModal(p)" style=" background-color:#4F5D73" cButton>Add Player</button>
+                                    <!-- <a href="/#/register-team"><i class="fa fa-eye"></i></a> -->
+                                    <!-- <i class="fa fa-eye"></i> -->
+                                </td>
+                            </ng-container>
                         </tr>
                     </tbody>
                 </table>
@@ -69,7 +73,7 @@
 <c-modal id="liveDemoModal" alignment="center" [visible]="visible" (visibleChange)="handleLiveDemoChange($event)">
     <c-modal-header>
         <h4 *ngIf="visible" cModalTitle>Fooseball Player: {{playerSingle.firstName}}</h4>
-        <button (click)="toggleModalAgain()" cButtonClose></button>
+        <button (click)="toggleModalAgain_close()" cButtonClose></button>
     </c-modal-header>
     <c-modal-body>
         <div style="display: flex;
@@ -111,8 +115,9 @@
         </div> -->
     </c-modal-body>
     <c-modal-footer>
-        <button (click)="toggleModalAgain()" cButton color="secondary">
-        Close
+        <button (click)="toggleModalAgain(playerSingle)" cButton color="primary"> 
+        Add
       </button>
+
     </c-modal-footer>
 </c-modal>
